--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,29 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container{
+  background-color: #415a77;
+  width: 500px;
+  margin: 220px auto;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+  gap: 20px;
+  height: 200px;
+  border-radius: 20px;
 
-.App-link {
-  color: #61dafb;
+  justify-content: space-evenly;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+body{
+  background-color: #0d1b2a;
+}
+input{
+  font-size: 15px;
+  padding: 5px 10px;
+  outline: none;
+  border: 2px solid #415a77;
+  border-radius: 20px;
+  font-weight: 700;
+}
+select{
+  font-size: 15px;
+  border-radius: 10px;
+  padding: 5px;
 }
